<resources>
    <string name="app_name">Dungeon Master</string>
    <string name="unexplored_rooms">Unexplored rooms</string>
    <string name="power">Power</string>
    <string name="health_points">Health points</string>
    <string name="battle_result">Battle result</string>
    <string name="waiting">Waiting...</string>
    <string name="dungeon">Dungeon</string>
    <string name="player">Player</string>
    <string name="enemy">Enemy</string>
    <string name="attack">Attack</string>
    <string name="flee">Flee</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="fled">Fled</string>
    <string name="level_clear">Level Cleared</string>
    <string name="level_win">You have completed this level</string>
    <string name="game_lose">You have lose the game</string>
    <string name="empty_room">This room is Empty</string>
    <string name="health_potion_found">Health Potion Found!</string>
    <string name="power_charm_found">Power Charm found!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="health_potion_description">It restores between 1 and 3 health points. Do you want to use it?</string>
    <string name="power_charm_description">It increases your power by 5 to 10 points. Do you want to use it?</string>
    <string name="restart_game">Restart the game</string>
    <string name="level">Level</string>
    <string name="battle_title">Battle</string>
    <string name="exploration_result">Exploration result</string>
    <string name="item_left">Item left in the room</string>
    <string name="item_used">Item used</string>
    <string name="go_to_next_level">Go to the next level</string>
    <string name="validate">Validate</string>
    <string name="configuration_title">Configuration</string>
    <string name="player_stats">Player stats</string>
    <string name="dungeon_gen">Dungeon generation</string>
    <string name="level_size">Level size</string>
    <string name="difficulty_increase_multiplier">Difficulty multiplier</string>
    <string name="player_name">Player Name</string>
    <string name="difficulty">Difficulty</string>
    <string name="game_config">Game Configuration</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_custom">Custom</string>
    <string name="game_over">Game Over</string>
    <string name="empty_fields_error">Some fields are empty</string>
    <string name="score_saved">The score has been saved</string>
    <string name="scores">Scores</string>
    <string name="score">Score:</string>
</resources>