<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dungeon_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.DungeonActivity">

    <!-- Titre principal -->

    <!-- TableLayout pour les boutons -->
    <TableLayout
        android:id="@+id/room_table"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxHeight="100dp"
        android:padding="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tl_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_level"></TableLayout>

    <!-- TableLayout pour les statistiques -->
    <TableLayout
        android:id="@+id/tl_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layout_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_table">

        <!-- Première ligne -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/unexplored_rooms"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_unexplored_rooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="16"
                android:textSize="16sp" />
        </TableRow>

        <!-- Deuxième ligne -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/power"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="100"
                android:textSize="16sp" />
        </TableRow>

        <!-- Troisième ligne -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/health_points"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_health_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="10"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:id="@+id/layout_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/next_level_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_stats">

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_result"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/waiting"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/room_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/level"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_level_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="1"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/next_level_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_next_level"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_result" />

</androidx.constraintlayout.widget.ConstraintLayout>
